# openspot_sim

./: .devcontainer.json  CMakeLists.txt  README.md  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: devel.yml  release.yml
dockerfiles/: .devcontainer.json  deploy-entrypoint.sh  deploy.Dockerfile  devel-entrypoint.sh  devel.Dockerfile
include/openspot/: drive.hpp  itf.hpp
include/sdnova_simulation/: drive.hpp  itf.hpp  quad_drive.hpp  sdnova_ctrl.hpp  visibility_control.h
launch/: bringup.py  indoor.py  outdoor.py  robot.py
models/openspot_classic/: model.config  model.sdf
models/sdnova_classic/: model.config  model.sdf
src/: drive.cpp  itf.cpp  quad_drive.cpp  sdnova_ctrl.cpp
urdf/: openspot.urdf  sdnova.urdf
world/: demo.sdf  indoor.sdf  outdoor.sdf
